src/objects/Apttus__WizardStep2__c.object
<CustomObject>
    <description>The step that is designed and used in Wizard designs.</description>
    <fields>
        <fullName>Apttus__BannerStatement__c</fullName>
        <description>Defaults to Step Design label and is used by the Wizard Step Runtime as the banner.</description>
        <inlineHelpText>Defaults to Step Design label and is used by the Wizard Step Runtime as the banner.</inlineHelpText>
        <label>Banner Statement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Category__c</fullName>
        <description>Controlling the subcategory field, whose list values shall allow users to search, find, and select Steps</description>
        <inlineHelpText>Controlling the subcategory field, whose list values shall allow users to search, find, and select Steps</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ContextObject__c</fullName>
        <description>Business object context, used to filter and align inputs.</description>
        <inlineHelpText>Business object context, used to filter and align inputs.</inlineHelpText>
        <label>Context Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ContextType__c</fullName>
        <description>Type of context, whether its All or Object. 
All means that any input can be used in the step design. 
Object means that only aligned (same object) inputs can be used in the step design.</description>
        <inlineHelpText>Type of context, whether its All or Object. 
All means that any input can be used in the step design. 
Object means that only aligned (same object) inputs can be used in the step design.</inlineHelpText>
        <label>Context Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>Describes the expected use of this step as a designer</description>
        <inlineHelpText>Describes the expected use of this step as a designer</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ImageFilename__c</fullName>
        <description>Name of the image file to be displayed on this step in wizard</description>
        <inlineHelpText>Name of the image file to be displayed on this step in wizard</inlineHelpText>
        <label>Image Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__InputGroupOption__c</fullName>
        <description>Indicates how the inputs within a step are grouped. Repeatable allows the user to enter multiple set of values of configured inputs and Table Layout displays it as a table.</description>
        <inlineHelpText>Indicates how the inputs within a step are grouped. Repeatable allows the user to enter multiple set of values of configured inputs and Table Layout displays it as a table.</inlineHelpText>
        <label>Input Group Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Repeatable</fullName>
                </value>
                <value>
                    <fullName>Table Layout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Keywords__c</fullName>
        <description>Additional field for use in search and selection</description>
        <inlineHelpText>Additional field for use in search and selection</inlineHelpText>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__RuntimeHelpText__c</fullName>
        <description>Describe what the runtime user can see as a help or instruction description of this Step.</description>
        <inlineHelpText>Describe what the runtime user can see as a help or instruction description of this Step.</inlineHelpText>
        <label>Runtime Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>The order in which the screen should be displayed to the user.</description>
        <inlineHelpText>The order in which the screen should be displayed to the user.</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Subcategory__c</fullName>
        <description>Dependent on the category field, whose list values shall allow users to search, find, and select Steps</description>
        <inlineHelpText>Dependent on the category field, whose list values shall allow users to search, find, and select Steps</inlineHelpText>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__WizardDesignId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to wizard design this step belongs to.</description>
        <inlineHelpText>Lookup to wizard design this step belongs to.</inlineHelpText>
        <label>Wizard Design</label>
        <referenceTo>Apttus__WizardDesign__c</referenceTo>
        <relationshipLabel>Steps</relationshipLabel>
        <relationshipName>Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wizard Step</label>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>